# XLabel

./: README.md  pyproject.toml  requirements.txt
core/: __init__.py  basic_usage.py  exif_utils.py
xlabel/: __init__.py  cli.py  creator.py  gui.py  reader.py  xcreator.py  xlabel_cli.py  xlabel_gui.py  xreader.py
xlabel/core/: __init__.py  exif_utils.py  xcreator.py  xlabel_cli.py  xlabel_converters.py  xlabel_creator.py  xlabel_reader.py  xreader.py
xlabel/example/: basic_usage.py
xlabel/examples/: basic_usage.py
xlabel/xlabel_format_converters/: __init__.py  coco_converter.py  common.py  voc_converter.py  yolo_converter.py
xlabel/xlabel_gui/: __init__.py  annotation_list.py  bbox_panel.py  class_list.py  image_viewer.py  main.py  main_window.py
xlabel/xlabel_gui/panels/: __init__.py  base_panel.py  bbox_panel.py  keypoints_panel.py  mask_panel.py  panels_mask_panel.py  polygon_panel.py
